--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<title>Barber Shop</title>
+<title>Leprosorium</title>
 <script type="text/javascript" src="/scripts.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <link
@@ -29,13 +29,9 @@
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="/visit" class="nav-link px-2 text-white">Записаться</a></li>
-          <li><a href="/showusers" class="nav-link px-2 text-white">Список записавшихся</a></li>
-          <li><a href="/pricing" class="nav-link px-2 text-white">Pricing</a></li>
+          <li><a href="/" class="nav-link px-2 text-secondary">Posts</a></li>
+          <li><a href="/new" class="nav-link px-2 text-white">New post</a></li>
           
-          <li><a href="/about" class="nav-link px-2 text-white">О нас</a></li>
-          <li><a href="/contacts" class="nav-link px-2 text-white">Контакты</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
