--- a/views/new.erb
+++ b/views/new.erb
@@ -6,6 +6,6 @@
     <textarea class="form-control" rows="6"></textarea><br />
 
    
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </p>
