--- a/views/index.erb
+++ b/views/index.erb
@@ -1,37 +1,15 @@
-<h2></h2><br><br><br>
-<h2 class="animate__animated animate__backInDown">Welcome. We are open.</h2><br>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      
-      <th scope="col">Day</th>
-      <th scope="col">Open Time</th>
-    </tr>
-  </thead>
-  <tbody>
-  
-  <tr>
-	<td>Mondey</td>
-	<td>10:00 - 18:00</td>
-  </tr>
-  <tr>
-	<td>Tuesday</td>
-	<td>10:00 - 18:00</td>
-  </tr><tr>
-  <td>Wednesday</td>
-  <td>10:00 - 18:00</td>
-</tr><tr>
-<td>Thursdey</td>
-<td>10:00 - 18:00</td>
-</tr><tr>
-<td>Fridey</td>
-<td>10:00 - 18:00</td>
-</tr><tr>
-<td>Saturdey</td>
-<td>10:00 - 17:00</td>
-</tr><tr>
-<td>Sundey</td>
-<td>10:00 - 17:00</td>
-</tr>
-  </tbody>
-</table>
+<h2>Latest posts:</h2>
+<br />
+
+
+<% @results.each do |post| %>
+  <p>
+    <%= post['content'] %>
+    <br />
+    <br />
+    Added at <%= post['created_date'] %>
+  </p>
+  <hr />
+
+<% end %>
+
