--- a/views/details.erb
+++ b/views/details.erb
@@ -9,3 +9,13 @@
     <br />
     
 </p>
+<h4>Comments:</h4>
+<p>
+    <form action="/<%= @row['id'] %>" method="POST">
+    
+    <textarea name="content" class="form-control" rows="6" placeholder="Type comment text here"></textarea><br />
+
+   
+    <button type="submit" class="btn btn-primary">Add comment</button>
+    </form>
+</p>
