--- a/views/details.erb
+++ b/views/details.erb
@@ -11,7 +11,7 @@
 </p>
 <h4>Comments:</h4>
 <p>
-    <form action="/<%= @row['id'] %>" method="POST">
+    <form action="/details/<%= @row['id'] %>" method="POST">
     
     <textarea name="content" class="form-control" rows="6" placeholder="Type comment text here"></textarea><br />
 
